--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
+NODE_ENV=
 PORT=
 
+# Database Configuration (gunakan database terpisah untuk testing)
+# PENTING: Jangan gunakan database production untuk testing!
 DB_HOST=
 DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
 
-BCRYPT_SALT_ROUNDS=
+# JWT Configuration
 JWT_SECRET=
+JWT_REFRESH_SECRET=
 JWT_EXPIRES_IN=
+JWT_REFRESH_EXPIRES_IN=
+
+# CORS Configuration
+CORS_ORIGIN=
